# new-yorker-best-books

./: .gitignore  README.md  pyproject.toml  requirements.txt  tags.txt
data/processed/: books-npr-processed.csv  books-nybb-tagged.csv  books-nybb.csv
data/raw/: best-books-2022.html  best-books-2025.html  best-books-2026.html
nybbooks/: app.py
nybbooks/pipeline/: download-npr.py  download-nybb.py  download.py  embed.py  extract-nybb.py  extract.py  join.py  process-npr.py  run.py  tag-nybb.py  tag.py
